v0.8: shop added, glitch svg overflow fix

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -25,7 +25,7 @@ body{
   transition: all 0.3s ease-in-out;
   transform: rotate3d(0,0,0,0deg);
   font-size: 1.3rem;
-  overflow-y: hidden;
+  // overflow-y: hidden;
   overflow-x: hidden;
   @include media-breakpoint-only(xs) {
     text-align: center;
@@ -111,13 +111,28 @@ h3{
 }
 
 .lil-sygnet{
+  -webkit-filter: url("#glitch");
+  filter: url("#glitch");
   width:6.8rem;
   height:5.2rem;
   background-size: contain;
   background-repeat: no-repeat;
   display: flex;
   background-image: url("../img/lil-sygnet.svg");
+  &--l1{
+    @extend .lil-sygnet;
+    position: absolute;
+    right:25%;
+    bottom:5rem;
+  }
+  &--l2{
+    @extend .lil-sygnet;
+    position: absolute;
+    left:15%;
+    top:12rem;
+  }
 }
+
 // <span class="let-a"></span>
 // <span class="let-n"></span>
 // <span class="let-o"></span>
@@ -142,6 +157,11 @@ h3{
     left:3rem;
     top:30rem;
   }
+  &--l2{
+    @extend .let-a;
+    left:20rem;
+    top:-3rem;
+  }
 }
 .let-n{
   @extend .letters;
@@ -157,6 +177,16 @@ h3{
     left:35rem;
     top:20rem;
   }
+  &--l3{
+    @extend .let-n;
+    left:45%;
+    top:15rem;
+  }
+  &--l4{
+    @extend .let-n;
+    left:10%;
+    bottom:20rem;
+  }
 }
 .let-o{
   @extend .letters;
@@ -169,8 +199,23 @@ h3{
   }
   &--l2{
     @extend .let-o;
-    bottom: -3rem;
     right: 0;
+    bottom: -3rem;
+  }
+  &--l3{
+    @extend .let-o;
+    right: 3rem;
+    top: 4rem;
+  }
+  &--l4{
+    @extend .let-o;
+    right: 3rem;
+    top: 4rem;
+  }
+  &--l5{
+    @extend .let-o;
+    left: 10%;
+    top: 35%;
   }
 }
 .let-y{
@@ -182,6 +227,18 @@ h3{
     left: -5rem;
     bottom: 5rem;
   }
+  //streamerzy
+  &--l2{
+    @extend .let-y;
+    left: 17%;
+    bottom: -17rem;
+  }
+  // sklep
+  &--l3{
+    @extend .let-y;
+    right: 7rem;
+    top: 7rem;
+  }
 }
 .let-m{
   @extend .letters;
@@ -191,6 +248,16 @@ h3{
     @extend .let-m;
     left:20rem;
     top:-2rem;
+  }
+  &--l2{
+    @extend .let-m;
+    right:10rem;
+    top:10rem;
+  }
+  &--l3{
+    @extend .let-m;
+    right:20%;
+    bottom:28rem;
   }
 }
 
@@ -210,7 +277,18 @@ h3{
     right: -16rem;
     top:0rem;
   }
-
+  &--lshop{
+    @extend .red-square;
+    left:8rem;
+    bottom:3rem;
+  }
+  &--smolshop{
+    @extend .red-square;
+    height: 4.6rem;
+    width: 4.6rem;
+    right: 20%;
+    top: 13rem;
+  }
   &--smol{
     @extend .red-square;
     height: 6rem;
@@ -239,7 +317,10 @@ h3{
   background-repeat: no-repeat;
   display: flex;
   position: absolute;
-
+  -webkit-filter: url("#glitch");
+  filter: url("#glitch");
+  // transform: rotate(180deg);
+  // transform-origin: 0 0;
   &--loc1{
     @extend .elem_6x;
     right: 5.5rem;
@@ -258,6 +339,18 @@ h3{
     right: 2rem;
     bottom: -4rem;
     transform: rotate(90deg);
+  }
+  &--lshop{
+    @extend .elem_6x;
+    left:15rem;
+    bottom:6rem;
+    z-index:199;
+  }
+  &--l4{
+    @extend .elem_6x;
+    right:16rem;
+    bottom:13rem;
+    z-index:199;
   }
 }
 
@@ -510,7 +603,8 @@ $about-section-height: 57rem;
       background-size: cover;
       margin-right: -14rem;
       @include media-breakpoint-down(sm){
-        margin-left: -7rem;
+        margin-left: -4rem;
+        margin-right: -4rem;
         margin-top: 4rem;
       }
     }
@@ -523,13 +617,14 @@ $about-section-height: 57rem;
       background-position: center;
       // background-position: 50% 50%;
       background-size: cover;
-      // position: absolute;
+      position: relative;
+      z-index: 5;
       // top: 0;
       // right: 0;
       // margin-right: -15px;
-      @include media-breakpoint-down(sm){
-        display: none;
-      }
+      // @include media-breakpoint-down(sm){
+      //   display: none;
+      // }
     }
   }
 
@@ -600,7 +695,7 @@ $about-section-height: 57rem;
   background-position: center;
   background-size: cover;
   min-height: 75rem;
-  margin-bottom: 5rem;
+  margin-bottom: 10rem;
   &--wrapper{
     padding-top: 23rem;
   }
@@ -689,7 +784,17 @@ $about-section-height: 57rem;
 }
 
 
-
+.shop{
+  position: relative;
+  background-image: url("../img/shop_bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 90rem;
+  &__content{
+    padding-top: 35%;
+  }
+}
 
 
 
@@ -708,6 +813,7 @@ $about-section-height: 57rem;
   padding-top: 28rem;
   padding-bottom: 8rem;
   position: relative;
+  overflow: hidden;
 
   &__title{
     max-width: 50rem;
